[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = "2"
napi-derive = "2"
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = "0.2"
rwget = { version = "0.1.5" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
